--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "prefix": "!",
-    "token": "YOUR_TOKEN",
+    "token": "ODkwOTgzNjY5NDA0MTYwMDEw.YU3vNA.ocnM5KSBPxHKosv9WYHNHDfmNrs",
     "activityType": "PLAYING",
     "activity": "your music selections"
 }
