--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "music-bot",
   "version": "1.0.0",
-  "repository": "https://github.com/TannerGabriel/discord-music-bot.git",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TannerGabriel/discord-music-bot.git"
+  },
   "description": "A simple discord music bot",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "prettier --write \"**/*.js\""
   },
@@ -17,13 +21,23 @@
   "license": "MIT",
   "dependencies": {
     "@discordjs/opus": "^0.6.0",
+    "axios": "^0.21.4",
     "discord-player": "^5.1.0",
     "discord.js": "^13.1.0",
+    "express": "^4.17.1",
     "ffmpeg": "0.0.4",
+    "ffmpeg-static": "^4.4.0",
     "fluent-ffmpeg": "^2.1.2",
+    "lodash": "^4.17.21",
+    "node-opus": "^0.3.3",
     "ytdl-core": "^4.9.1"
   },
   "devDependencies": {
+    "node": "^16.9.1",
     "prettier": "2.4.1"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/TannerGabriel/discord-music-bot/issues"
+  },
+  "homepage": "https://github.com/TannerGabriel/discord-music-bot#readme"
 }
